myteo/test/analyze/type_check/binary_operation/numeric.exp
Error: Expected type `int` but found `bool`
test/analyze/type_check/binary_operation/numeric.myte:9:7-11
 9 |   (1 - true: int);
   |        ^^^^

Error: Expected type `int` but found `bool`
test/analyze/type_check/binary_operation/numeric.myte:10:3-7
 10 |   (true - 1: int);
    |    ^^^^

Error: Expected type `int` but found `bool`
test/analyze/type_check/binary_operation/numeric.myte:11:3-7
 11 |   (true - (): int);
    |    ^^^^

Error: Expected type `int` but found `unit`
test/analyze/type_check/binary_operation/numeric.myte:11:10-12
 11 |   (true - (): int);
    |           ^^