myteo/test/analyze/type_check/binary_operation/numeric.myte
module Test

fun main() {
  (1 - 2: int);
  (1 * 2: int);
  (1 / 2: int);

  (1 - true: int);
  (true - 1: int);
  (true - (): int);
}